--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches:
     - master
+  workflow_dispatch:
+    branches:
+    - v1.16.0.5
 env:
   SOURCE_ARTIFACT: source
 jobs:
